--- a/gitops/apps/home-assistant/scripts-configmap.yaml
+++ b/gitops/apps/home-assistant/scripts-configmap.yaml
@@ -139,14 +139,7 @@ data:
                 {{ true }}
               {% endif %}
         
-        # Debug logging - system log first to ensure we see it
-        - service: "system_log.write"
-          data:
-            message: >-
-              [scheduled_light_on] Script called: timer_mode={{ timer_mode }}, 
-              fallback_lights={{ fallback_lights }}, scene={{ scene_to_activate }}, 
-              scene_exists={{ scene_exists }}, lights_on_check={{ lights_on_check }}
-            level: "info"
+        # Debug logging
         - service: "logbook.log"
           data:
             name: "scheduled_light_on"
@@ -159,12 +152,12 @@ data:
         - choose:
             - conditions: "{{ scene_exists and lights_on_check | bool }}"
               sequence:
-                - service: "system_log.write"
+                - service: "logbook.log"
                   data:
+                    name: "scheduled_light_on"
                     message: >-
-                      [scheduled_light_on] ACTIVATING SCENE: {{ scene_to_activate }} 
+                      ACTIVATING SCENE: {{ scene_to_activate }} 
                       (scene_exists={{ scene_exists }}, lights_on_check={{ lights_on_check }})
-                    level: "info"
                 - parallel:
                     - service: "scene.turn_on"
                       data:
@@ -180,38 +173,38 @@ data:
                             entity_id: "{{ scene_cycle_helper }}"
                           data:
                             option: "{{ slot }}"
-                - service: "system_log.write"
+                - service: "logbook.log"
                   data:
+                    name: "scheduled_light_on"
                     message: >-
-                      [scheduled_light_on] Scene {{ scene_to_activate }} activated successfully
-                    level: "info"
+                      Scene {{ scene_to_activate }} activated successfully
             - conditions: "{{ scene_exists and not lights_on_check | bool }}"
               sequence:
-                - service: "system_log.write"
+                - service: "logbook.log"
                   data:
+                    name: "scheduled_light_on"
                     message: >-
-                      [scheduled_light_on] SKIPPED: Scene '{{ scene_to_activate }}' - lights are off 
+                      SKIPPED: Scene '{{ scene_to_activate }}' - lights are off 
                       (lights_on_check={{ lights_on_check }})
-                    level: "warning"
                 - service: "logbook.log"
                   data:
                     name: "scheduled_light_on"
                     message: "Timer mode: Scene '{{ scene_to_activate }}' skipped - lights are off"
           default:
-            - service: "system_log.write"
+            - service: "logbook.log"
               data:
+                name: "scheduled_light_on"
                 message: >-
-                  [scheduled_light_on] Scene '{{ scene_to_activate }}' does NOT exist 
+                  Scene '{{ scene_to_activate }}' does NOT exist 
                   (scene_exists={{ scene_exists }})
-                level: "warning"
             - choose:
                 - conditions: "{{ timer_mode_active }}"
                   sequence:
-                    - service: "system_log.write"
+                    - service: "logbook.log"
                       data:
+                        name: "scheduled_light_on"
                         message: >-
-                          [scheduled_light_on] Timer mode: Scene missing and timer mode enabled - no action taken
-                        level: "warning"
+                          Timer mode: Scene missing and timer mode enabled - no action taken
                     - service: "logbook.log"
                       data:
                         name: "scheduled_light_on"
